--- a/public/index2.html
+++ b/public/index2.html
@@ -28,8 +28,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/vendor.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121642637-4"></script>
@@ -55,7 +55,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="%PUBLIC_URL%/assets/js/vendor.min.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/app.js"></script>
+    <script src="../assets/js/vendor.min.js"></script>
+    <script src="../assets/js/app.js"></script>
   </body>
 </html>
