--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,12 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
 
+    <!-- Load jQuery(1.7+) -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    
+    <!-- Customized Style -->
+    <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121642637-4"></script>
     <script>
