--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="Neomall, mall, market, marketplace, shopping, ecommerce, online, vendor, trade, neo">
+    <meta name="author" content="Oluwatobiloba Muritala">
     <meta
       name="description"
       content="Neomall. Your favorite online mall."
@@ -38,14 +40,14 @@
     <link rel="stylesheet" href="owl-carousel/owl.theme.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121642637-4"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121642637-4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'UA-121642637-4');
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
